--- a/style.css
+++ b/style.css
@@ -1271,6 +1271,12 @@ textarea.w-select {
         padding-left: 10px;
     }
 }
+
+@media screen and (max-width: 767px) {
+	p {
+		font-size:1.5rem;
+	}
+}
 .w-lightbox-backdrop {
     cursor: auto;
     letter-spacing: normal;
@@ -2055,7 +2061,7 @@ p {
     letter-spacing: -0.48px;
     margin-bottom: 10px;
     font-family: Inter, sans-serif;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 300;
     line-height: 1.2em;
 }
@@ -24892,6 +24898,7 @@ figure {
     }
     p {
         line-height: 1.3em;
+		font-size:1.5rem;
     }
     .content-section {
         overflow: hidden;
